2001-07-04  Seth Robertson  <seth@yeah.baka.org>

	* lib/b_general.c: Completed and compiling!